--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>拆单工具笔记.md</title>
+	<title>拆单工具（云熙）笔记</title>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 	<style>
@@ -1987,7 +1987,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 										<li><a href="#%E9%97%A8">门</a>
 											<ul>
 												<li><a
-														href="#%E9%97%A8%E6%9D%BF%E9%9C%80%E8%A6%81%E4%B8%8B%E6%96%99%E5%8A%A0%E5%B7%A5">门板需要下料加工？</a>
+														href="#%E9%97%A8%E6%9D%BF%E9%9C%80%E8%A6%81%E4%B8%8B%E6%96%99%E5%8A%A0%E5%B7%A5%EF%BC%9F">门板需要下料加工？</a>
 												</li>
 												<li><a href="#%E7%8E%BB%E7%92%83%E9%97%A8">玻璃门</a>
 													<ul>
@@ -2025,11 +2025,11 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 											<ul>
 												<li><a href="#%E5%B8%B8%E7%94%A8">常用</a></li>
 												<li><a
-														href="#%E6%9D%BF%E4%BB%B6%E5%8F%82%E6%95%B0%E6%89%93%E5%AD%94%E8%A7%84%E5%88%99%E7%AD%89">板件参数（打孔规则等）</a>
+														href="#%E6%9D%BF%E4%BB%B6%E5%8F%82%E6%95%B0%EF%BC%88%E6%89%93%E5%AD%94%E8%A7%84%E5%88%99%E7%AD%89%EF%BC%89">板件参数（打孔规则等）</a>
 												</li>
 												<li><a href="#%E5%AD%94%E4%BD%8D">孔位</a>
 													<ul>
-														<li><a href="#%E4%BF%AE%E6%94%B9%E9%80%A3%E6%8E%A5">修改連接</a>
+														<li><a href="#%E4%BF%AE%E6%94%B9%E8%BF%9E%E6%8E%A5">修改連接</a>
 														</li>
 													</ul>
 												</li>
@@ -2062,7 +2062,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 											<ul>
 												<li><a href="#%E7%91%95%E7%96%B5%E6%9D%BF%E6%9D%90">瑕疵板材</a></li>
 												<li><a
-														href="#%E6%B7%B7%E5%90%88%E7%94%9F%E4%BA%A7%E4%B8%8D%E5%90%8C%E8%A7%84%E6%A0%BC%E6%9D%BF%E6%9D%90%E5%90%8C%E6%97%B6%E6%8E%92%E7%89%88">混合生产，不同规格板材同时排版</a>
+														href="#%E6%B7%B7%E5%90%88%E7%94%9F%E4%BA%A7%EF%BC%8C%E4%B8%8D%E5%90%8C%E8%A7%84%E6%A0%BC%E6%9D%BF%E6%9D%90%E5%90%8C%E6%97%B6%E6%8E%92%E7%89%88">混合生产，不同规格板材同时排版</a>
 												</li>
 											</ul>
 										</li>
@@ -2082,7 +2082,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 										<li><a href="#%E7%94%A8dxf%E6%8E%A7%E5%88%B6%E5%BD%A2%E7%8A%B6">用dxf控制形状</a>
 											<ul>
 												<li><a
-														href="#%E5%AF%BC%E5%85%A5%E7%9A%84dxf%E5%A6%82%E4%BD%95%E5%AE%9A%E4%BD%8D%E5%88%B0%E6%9D%BF%E4%BB%B6">导入的dxf如何定位到板件？</a>
+														href="#%E5%AF%BC%E5%85%A5%E7%9A%84dxf%E5%A6%82%E4%BD%95%E5%AE%9A%E4%BD%8D%E5%88%B0%E6%9D%BF%E4%BB%B6%EF%BC%9F">导入的dxf如何定位到板件？</a>
 												</li>
 											</ul>
 										</li>
@@ -2101,7 +2101,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 								<li><a href="#%E5%9C%86%E8%A7%92-%E5%80%92%E8%A7%92-%E5%88%87%E8%A7%92">圆角 倒角 切角</a>
 									<ul>
 										<li><a
-												href="#%E5%88%87%E8%A7%92%E6%9F%9C%E6%95%B4%E6%9F%9C%E6%96%9C%E5%88%87">切角柜（整柜斜切）</a>
+												href="#%E5%88%87%E8%A7%92%E6%9F%9C%EF%BC%88%E6%95%B4%E6%9F%9C%E6%96%9C%E5%88%87%EF%BC%89">切角柜（整柜斜切）</a>
 										</li>
 										<li><a
 												href="#%E5%B1%9E%E6%80%A7%E9%9D%A2%E6%9D%BF%E7%9A%84%E7%BC%96%E8%BE%91%E5%BD%A2%E7%8A%B6">属性面板的编辑形状</a>
@@ -2133,10 +2133,10 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 										<li><a href="#%E6%9D%BF%E4%BB%B6%E8%87%AA%E5%AE%9A%E4%B9%89">板件自定义</a>
 											<ul>
 												<li><a
-														href="#%E7%AB%8B%E6%9D%BF%E4%BE%A7%E6%9D%BF-%E4%B8%AD%E7%AB%8B%E6%9D%BF-%E7%A9%BA%E7%99%BD%E6%9D%BF">立板：侧板
+														href="#%E7%AB%8B%E6%9D%BF%EF%BC%9A%E4%BE%A7%E6%9D%BF-%E4%B8%AD%E7%AB%8B%E6%9D%BF-%E7%A9%BA%E7%99%BD%E6%9D%BF">立板：侧板
 														中立板 空白板</a></li>
 												<li><a
-														href="#%E6%A8%AA%E6%9D%BF%E9%A1%B6%E6%9D%BF-%E5%B1%82%E6%9D%BF-%E5%BA%95%E6%9D%BF-%E7%A9%BA%E7%99%BD%E6%9D%BF">横板：顶板
+														href="#%E6%A8%AA%E6%9D%BF%EF%BC%9A%E9%A1%B6%E6%9D%BF-%E5%B1%82%E6%9D%BF-%E5%BA%95%E6%9D%BF-%E7%A9%BA%E7%99%BD%E6%9D%BF">横板：顶板
 														层板 底板 空白板</a></li>
 												<li><a href="#%E5%89%8D%E6%9D%BF">前板</a></li>
 												<li><a href="#%E8%83%8C%E6%9D%BF">背板</a>
@@ -2148,7 +2148,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 																<li><a href="#%E5%85%A8%E7%9B%96%E5%BC%8F">全盖式</a></li>
 																<li><a href="#%E4%BB%85%E6%8B%89%E6%9D%A1">仅拉条</a></li>
 																<li><a
-																		href="#%E8%83%8C%E6%9D%BF%E5%B5%8C%E5%85%A5%E5%9C%A8%E6%A8%AA%E7%BA%B5%E6%8B%89%E6%9D%A1%E4%B9%8B%E9%97%B4">背板嵌入在横/纵拉条之间</a>
+																		href="#%E8%83%8C%E6%9D%BF%E5%B5%8C%E5%85%A5%E5%9C%A8%E6%A8%AA%2F%E7%BA%B5%E6%8B%89%E6%9D%A1%E4%B9%8B%E9%97%B4">背板嵌入在横/纵拉条之间</a>
 																</li>
 																<li><a
 																		href="#%E8%83%8C%E6%9D%BF%E5%9C%A8%E6%8B%89%E6%9D%A1%E5%90%8E">背板在拉条后</a>
@@ -2193,7 +2193,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 										</li>
 										<li><a href="#%E7%81%AF%E5%B8%A6%E7%81%AF%E6%A7%BD">灯带灯槽</a>
 											<ul>
-												<li><a href="#%E5%BC%82%E5%BD%A2%E7%81%AF%E6%A7%BD">异形灯槽？</a></li>
+												<li><a href="#%E5%BC%82%E5%BD%A2%E7%81%AF%E6%A7%BD%EF%BC%9F">异形灯槽？</a></li>
 												<li><a
 														href="#%E5%B1%82%E6%9D%BF%E4%BE%A7%E9%9D%A2%E5%8A%A0%E7%81%AF%E6%A7%BD">层板侧面加灯槽</a>
 												</li>
@@ -2221,7 +2221,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 										<li><a href="#%E7%BA%B9%E7%90%86">纹理</a>
 											<ul>
 												<li><a
-														href="#%E6%B7%BB%E5%8A%A0%E5%8E%82%E5%AE%B6%E8%87%AA%E5%B7%B1%E7%9A%84%E7%BA%B9%E7%90%86%E9%A2%9C%E8%89%B2">添加厂家自己的纹理/颜色</a>
+														href="#%E6%B7%BB%E5%8A%A0%E5%8E%82%E5%AE%B6%E8%87%AA%E5%B7%B1%E7%9A%84%E7%BA%B9%E7%90%86%2F%E9%A2%9C%E8%89%B2">添加厂家自己的纹理/颜色</a>
 												</li>
 											</ul>
 										</li>
