--- a/index.html
+++ b/index.html
@@ -2730,7 +2730,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			<h2 id="%E5%85%AD%E9%9D%A2%E7%94%BB%E5%9B%BE" tabindex="-1">六面画图</h2>
 			<p>大所謂六面畫法，就是利用二維視圖的選面，在不同的面添加只屬於正面的部件如前板、門板等</p>
 			<p>如果是正多边形的柜子，可以用异形编辑器倒角控制斜切角度然后拼接，通过组合生成连接，但不能保证孔槽的合理性</p>
-			<p><img src="image-1.png" alt="alt text"></p>
+		
 			<p><img src="image/拆单工具笔记/1730940842581.png" alt="1730940842581"></p>
 			<h2 id="%E5%BD%A2%E7%8A%B6panel%E7%9A%84%E5%85%B6%E5%AE%83%E5%B7%A5%E5%85%B7" tabindex="-1">形状panel的其它工具
 			</h2>
@@ -2815,10 +2815,13 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			<p>侧隙距离是活动层板才可用的参数，活动层板不与侧板产生孔位连接，只在下端生成层板托连接
 				活动层板与侧板的间隙一般自动设置，必要时才手动修改</p>
 			<h4 id="%E5%89%8D%E6%9D%BF" tabindex="-1">前板</h4>
-			<p><img src="image/云熙笔记/1730363235985.png" alt="1730363235985">
+			<p>
+			  <img src="image/云熙笔记/1730363235985.png" alt="1730363235985">
+				<br/><br/>
 				前板只有两个接合样式：夹、盖，
 				<img src="image/云熙笔记/1730363274094.png" alt="1730363274094">
 				<img src="image/云熙笔记/1730363346508.png" alt="1730363346508">
+				<br/><br/>
 				盖式中需要调整覆盖面宽度，实现四个边的全/半盖等。正数外扩，负数内缩
 			</p>
 			<h4 id="%E8%83%8C%E6%9D%BF" tabindex="-1">背板</h4>
@@ -2826,15 +2829,16 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			<p><img src="image/云熙笔记/1730357153128.png" alt="1730357153128"></p>
 			<h5 id="%E6%8E%A5%E5%90%88%E6%A0%B7%E5%BC%8F" tabindex="-1">接合样式</h5>
 			<h6 id="%E5%88%92%E6%A7%BD%E5%BC%8F" tabindex="-1">划槽式</h6>
-			<p>可带背板
+			<p>可带背板<br/><br/>
 				<img src="image/云熙笔记/1730358594809.png" alt="1730358594809">
 			</p>
 			<h6 id="%E5%86%85%E5%B5%8C%E5%BC%8F" tabindex="-1">内嵌式</h6>
 			<p>单纯靠固件连接，因此要18厚才能包持侧向钉，也因为够厚，所以不需要另外的拉条加固
+				<br/><br/>
 				<img src="image/云熙笔记/1730358808555.png" alt="1730358808555">
 			</p>
 			<h6 id="%E5%85%A8%E7%9B%96%E5%BC%8F" tabindex="-1">全盖式</h6>
-			<p>同理ditto
+			<p>同理ditto<br/><br/>
 				<img src="image/云熙笔记/1730359045338.png" alt="1730359045338">
 			</p>
 			<h6 id="%E4%BB%85%E6%8B%89%E6%9D%A1" tabindex="-1">仅拉条</h6>
@@ -2854,6 +2858,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			</p>
 			<h6 id="%E8%83%8C%E6%9D%BF%E5%9C%A8%E6%8B%89%E6%9D%A1%E5%90%8E" tabindex="-1">背板在拉条后</h6>
 			<p>背板不到顶，这种情况最少两个拉条；背板依靠滑槽固定，和拉条间没有连接
+			<br/><br/>
 				<img src="image/云熙笔记/1730359704339.png" alt="1730359704339">
 				<img src="image/云熙笔记/1730359743265.png" alt="1730359743265">
 				<img src="image/云熙笔记/1730359889031.png" alt="1730359889031">
@@ -2938,7 +2943,7 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			<h2 id="%E8%A7%86%E5%9B%BE%E5%B7%A5%E5%85%B7%E6%A0%8F" tabindex="-1">视图工具栏</h2>
 			<h3 id="%E8%A7%86%E5%9B%BE" tabindex="-1">视图</h3>
 			<p><img src="image/拆单工具笔记/1730941467599.png" alt="1730941467599">
-				单独显示2/3d或都显示（分栏）3d刷新用于重置到默认视口（F）</p>
+			<br/><br/>	单独显示2/3d或都显示（分栏）3d刷新用于重置到默认视口（F）</p>
 			<h3 id="%E7%BA%B9%E7%90%86" tabindex="-1">纹理</h3>
 			<p>板件纹理 单块板
 				柜体纹理 整个柜体全部板件
@@ -3117,7 +3122,9 @@ Arduino® Light Theme - Stefania Mellai <s.mellai@arduino.cc>
 			</h2>
 			<p>右键多头钻打孔设置/排钻打孔设置，如果正反面都没有孔位，说明不是用~打孔</p>
 			<p>多头钻就是有若干个 Tn 刀具设置，</p>
-			<p><img src="image/拆单工具笔记/1731134942605.png" alt="1731134942605">如果不是以排钻方式导入，就是以多头钻加工</p>
+			<p><img src="image/拆单工具笔记/1731134942605.png" alt="1731134942605">
+			<br/><br/>
+			如果不是以排钻方式导入，就是以多头钻加工</p>
 			<h3 id="%E5%88%80%E5%85%B7%E5%92%8C%E6%8E%92%E9%92%BB%E8%AE%BE%E7%BD%AE" tabindex="-1">刀具和排钻设置</h3>
 			<p><img src="image/拆单工具笔记/1731139730033.png" alt="1731139730033"></p>
 			<p><img src="image/拆单工具笔记/1731139768628.png" alt="1731139768628"></p>
